# mockdr

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  TESTING.md  action.yml  ci.sh  docker-compose.yml  render.yaml  start.sh
backend/: config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: auth.py  cs_auth.py  es_auth.py  graph_auth.py  mde_auth.py  sentinel_auth.py  splunk_auth.py  xdr_auth.py
backend/api/dto/: common.py  playbook.py  requests.py
backend/api/middleware/: audit.py  fault_injection.py  metrics.py  proxy.py  rate_limit.py  request_logging.py  security_headers.py  tenant_scope.py
backend/api/routers/: accounts.py  activities.py  agents.py  alerts.py  cs_auth.py  cs_cases.py  cs_detections.py  cs_discover.py  cs_host_groups.py  cs_hosts.py  cs_incidents.py  cs_iocs.py  cs_legacy_iocs.py  cs_processes.py  cs_quarantine.py  cs_users.py  deep_visibility.py  dev.py  device_control.py  docs.py  es_alerts.py  es_auth.py  es_cases.py  es_endpoints.py  es_exception_lists.py  es_rules.py  es_search.py  exclusions.py  firewall.py  groups.py  hashes.py  ioc.py  mde_advanced_hunting.py  mde_alerts.py  mde_auth.py  mde_file_info.py  mde_indicators.py  mde_investigations.py  mde_machine_actions.py  mde_machines.py  (+24 more)
backend/application/: policy_engine.py
backend/application/accounts/: commands.py  queries.py
backend/application/activities/: queries.py
backend/application/agents/: commands.py  queries.py
backend/application/alerts/: commands.py  queries.py
backend/application/cs_cases/: commands.py  queries.py
backend/application/cs_detections/: commands.py  queries.py
backend/application/cs_discover/: queries.py
backend/application/cs_host_groups/: commands.py  queries.py
backend/application/cs_hosts/: commands.py  queries.py
backend/application/cs_incidents/: commands.py  queries.py
backend/application/cs_iocs/: commands.py  queries.py
backend/application/cs_processes/: queries.py
backend/application/cs_quarantine/: commands.py  queries.py
backend/application/cs_users/: queries.py
backend/application/deep_visibility/: commands.py  queries.py
backend/application/dev/: __init__.py  commands.py  queries.py
backend/application/device_control/: commands.py  queries.py
backend/application/es_alerts/: commands.py  queries.py
backend/application/es_cases/: commands.py  queries.py
backend/application/es_endpoints/: commands.py  queries.py
backend/application/es_exception_lists/: commands.py  queries.py
backend/application/es_rules/: commands.py  queries.py
backend/application/es_search/: queries.py
backend/application/exclusions/: commands.py  queries.py
backend/application/firewall/: commands.py  queries.py
backend/application/graph/: __init__.py
backend/application/groups/: commands.py  queries.py
backend/application/ioc/: commands.py  queries.py
backend/application/mde_advanced_hunting/: queries.py
backend/application/mde_alerts/: commands.py  queries.py
backend/application/mde_file_info/: queries.py
backend/application/mde_indicators/: commands.py  queries.py
backend/application/mde_investigations/: commands.py  queries.py
backend/application/mde_machine_actions/: queries.py
backend/application/mde_machines/: commands.py  queries.py
backend/application/mde_software/: queries.py
backend/application/mde_users/: queries.py
backend/application/mde_vulnerabilities/: queries.py
backend/application/playbook/: _builtins.py  _dto.py  _registry.py  _run_state.py  commands.py  executor.py  queries.py
backend/application/policies/: commands.py  queries.py
backend/application/proxy/: _state.py  auth_headers.py  commands.py  queries.py  token_cache.py  vendor_routing.py
backend/application/request_log/: __init__.py  commands.py  queries.py
backend/application/sites/: commands.py  queries.py
backend/application/tags/: commands.py  queries.py
backend/application/threats/: commands.py  mitigation.py  notes.py  queries.py  (+1 more)
backend/domain/: account.py  activity.py  agent.py  alert.py  cs_case.py  cs_detection.py  cs_host.py  cs_host_group.py  cs_incident.py  cs_ioc.py  cs_oauth_client.py  cs_quarantined_file.py  cs_user.py  device_control_rule.py  dv_query.py  es_action_response.py  es_alert.py  es_case.py  es_case_comment.py  es_endpoint.py  es_exception_item.py  es_exception_list.py  es_rule.py  event_bus.py  exclusion.py  firewall_rule.py  group.py  ioc.py  mde_alert.py  mde_indicator.py  mde_investigation.py  mde_machine.py  mde_machine_action.py  mde_oauth_client.py  mde_software.py  mde_vulnerability.py  policy.py  proxy_recording.py  request_log.py  site.py  (+16 more)
backend/infrastructure/: dv_gen.py  persistence.py  process_gen.py  seed.py
backend/mockdr/: __init__.py  testing.py
backend/repository/: account_repo.py  activity_repo.py  agent_repo.py  alert_repo.py  base.py  blocklist_repo.py  cs_case_repo.py  cs_detection_repo.py  cs_host_group_repo.py  cs_host_repo.py  cs_incident_repo.py  cs_ioc_repo.py  cs_oauth_client_repo.py  cs_quarantine_repo.py  cs_user_repo.py  device_control_repo.py  dv_query_repo.py  es_action_response_repo.py  es_alert_repo.py  es_case_comment_repo.py  es_case_repo.py  es_endpoint_repo.py  es_exception_item_repo.py  es_exception_list_repo.py  es_rule_repo.py  exclusion_repo.py  firewall_repo.py  group_repo.py  ioc_repo.py  mde_alert_repo.py  mde_indicator_repo.py  mde_investigation_repo.py  mde_machine_action_repo.py  mde_machine_repo.py  mde_oauth_client_repo.py  mde_software_repo.py  mde_vulnerability_repo.py  policy_repo.py  request_log_repo.py  site_repo.py  (+17 more)
backend/tests/: conftest.py
backend/utils/: cs_fql.py  cs_pagination.py  cs_response.py  dt.py  es_pagination.py  es_query.py  es_response.py  filtering.py  graph_odata.py  graph_response.py  id_gen.py  internal_fields.py  logging.py  mde_odata.py  mde_response.py  nested.py  pagination.py  strip.py  token_expiry.py  xdr_response.py
(+1122 files in other folders)
